--- a/templates/includes/board_cover.html
+++ b/templates/includes/board_cover.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 
 <div style="max-height: 250px; height: 250px; box-shadow:0px 1px 5px 1px #e6e1e2;">
   <div style="width:100%; height:100%;">
