--- a/notifications/templates/notifications/activities.html
+++ b/notifications/templates/notifications/activities.html
@@ -9,7 +9,7 @@
 
 {% include "includes/page_heading.html" with text="Notifications" %}
 {% for event in events %}
-<div class="card mb-2" style="border:none; border-bottom:1px solid #dcd7d7;">
+<div class="card mb-2" style="border:none; border-bottom:1px solid #ff4500; background-color: #0e0e0e;">
   <div class="card-body p-4">
   {% if event.Object %}
     <h6>
