--- a/templates/base_home.html
+++ b/templates/base_home.html
@@ -18,8 +18,8 @@
       {% if bv %}
       {% include "includes/board_info.html" %}
       {% else %}
-      <a href="{% url 'new_subject' %}" class="btn btn-primary btn-block mt-4 cta_btn">CREATE POST</a>
-      <a href="{% url 'new_board' %}" class="btn btn-outline-primary btn-block mt-2 cta_btn">CREATE BOARD</a>
+      <a href="{% url 'new_subject' %}" class="btn btn-secondary btn-block mt-4 cta_btn">CREATE POST</a>
+      <a href="{% url 'new_board' %}" class="btn btn-outline-secondary btn-block mt-2 cta_btn">CREATE BOARD</a>
       {% endif %}
     </div>
   </div>
