--- a/users/templates/users/change_picture.html
+++ b/users/templates/users/change_picture.html
@@ -26,6 +26,7 @@
     <label for="id_dp">Upload a picture</label>
     <input type="file" class="form-control-file" id="id_dp" name="dp" accept="image/*">
   </div>
- <button type="submit" class="btn btn-primary btn-block" id="submit_pic">Submit</button>
-</form>
+ <button type="submit" class="btn btn-primary btn-block" id="submit_pic" style="background-color: #ff4500;">Submit</button>
+
+<br></form>
 {% endblock %}
