--- a/users/templates/users/profile_edit.html
+++ b/users/templates/users/profile_edit.html
@@ -26,6 +26,7 @@
     <label for="id_dob">Date of Birth</label>
     {% render_field profile_form.dob class="form-control" %}
   </div>
-  <button type="submit" class="btn btn-success btn-block">Save</button>
+  <button type="submit" class="btn btn-success btn-block" style="background-color: #ff4500;">Save</button>
+<br>
 </form>
 {% endblock %}
