--- a/boards/templates/boards/user_subscription_list.html
+++ b/boards/templates/boards/user_subscription_list.html
@@ -5,14 +5,14 @@
 {% block content %}
 
 {% include "includes/page_heading.html" with text="Subscription List" %}
-<div class="alert alert-light text-center" role="alert">
+<div class="alert alert-light text-center" style="background-color: #0e0e0e; border-color: #000000; color: white; border-radius: 5px;" role="alert">
   Subscribe interesting boards to populate your home feed with interesting subjects.
 </div>
 {% if subscriptions %}
   {% include "includes/partial_board.html" with boards=subscriptions %}
 {% else %}
-  <div class="card p-4 my-4 mx-0">
-    <h6 class="text-center">No Subscriptions Found</h6>
+  <div class="card p-4 my-4 mx-0" style="background-color: #0e0e0e; border-color: #000000; border-radius: 5px;">
+    <h6 class="text-center">No Subscriptions Found</h6> 
     <div style="margin:0 auto;">
     <p class="text-muted">You have not subscribed any boards yet.</p>
     </div>
