--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -10,6 +10,7 @@ body {
 .cta_btn {
   font-weight: bold;
   letter-spacing: 0.8px;
+  color :white
 }
 p {
   font-size: 14px;
@@ -84,6 +85,7 @@ input[name="query"]#search:focus {
 /* form styling */
 form[method="post"] label {
   font-weight: 600;
+  color:white;
 }
 form[method="post"] label span.asteriskField {
   color: #ff1100;
@@ -121,4 +123,13 @@ li.list-group-item:nth-child(odd) {
 li.list-group-item {
   border: none;
 }
+
+button{
+  background-color: #ff4500;
+}
+
+h6{
+  color:#ffffff;
+}
+
 
