--- a/templates/base_form.html
+++ b/templates/base_form.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block data %}
+{% include "includes/messages.html" %}
+
 <div class="container mx-auto my-4 "  style="background-color: #181818; border-radius: 10px ;" >
     <div class="row">
       <div class="container mx-auto" style="width: 50%;">
