--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -45,8 +45,8 @@
     </div>
 
     {% if request.user.is_authenticated %}
-    <a href="{% url 'inbox' %}" class="mr-3" id="check_messages"><i class="fa fa-comments  fa-lg" aria-hidden="true"></i><span id="messages_count"></span></a>
-      <a href="{% url 'activities' %}" class="mr-3" id="check_activities"><i class="fa fa-bell-o fa-lg" aria-hidden="true"></i><span id="activities_count"></span></a>
+    <a href="{% url 'inbox' %}" class="mr-3" id="check_messages"><i class="fa fa-comments  fa-lg" aria-hidden="true"></i></a>
+      <a href="{% url 'activities' %}" class="mr-3" id="check_activities"><i class="fa fa-bell-o fa-lg" aria-hidden="true"></i></a>
       <a href="{% url 'new_subject' %}" class="mr-3"><i class="fa fa-plus  fa-lg" aria-hidden="true"></i></a>
 
       <div class="dropdown" style="border-radius: 5px">
