--- a/templates/includes/messages.html
+++ b/templates/includes/messages.html
@@ -1,7 +1,7 @@
 {% if messages %}
 <div class="container" style="padding:0px;margin-top:15px;">
   {% for message in messages %}
-    <div class="alert {{ message.tags }} alert-dismissible fade show" role="alert">
+    <div class="alert {{ message.tags }}  alert-dark fade show" role="alert">
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
