--- a/users/templates/users/following.html
+++ b/users/templates/users/following.html
@@ -8,8 +8,8 @@
 {% block content %}
 {% include "includes/page_heading.html" with text="Following" %}
 {% for profile in profiles %}
-<div class="card mb-2" style="border:none; border-bottom:1px solid #dcd7d7;">
-  <div class="card-body p-4">
+<div class="card mb-2" style="background-color: #0e0e0e; border-color:#000000; border-radius: 5px;">
+  <div class="card-body p-4" >
 
     <div class="text-center" style="float:left; width:10%;">
       {% if profile.user.profile.get_picture %}
@@ -28,8 +28,8 @@
   </div>
 </div>
 {% empty %}
-<div class="card p-4 my-4 mx-0">
-  <h6 class="text-center">No Following Found</h6>
+<div class="card p-4 my-4 mx-0" style="background-color: #0e0e0e; border-color: #000000; border-radius: 5px;">
+  <h6 class="text-center" style="color: white;">No Following Found</h6>
   <div style="margin:0 auto;">
   <p class="text-muted">You don't have any following right now.</p>
   </div>
